--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "repository": {
     "type": "git",
-    "url": "git://github.com/yue/select.git"
+    "url": "git://github.com/buiteam/select.git"
   },
   "bugs": {
     "url": ""
