--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bui-select",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "keywords": [],
   "homepage": "",
@@ -17,19 +17,20 @@
     "main": "index.js",
     "dependencies": {
       "jquery": "1.9.1",
-      "bui-common": "1.1.0",
-      "bui-picker": "1.1.0",
-      "bui-list": "1.1.0",
-      "bui-dpl" : "1.1.0"
+      "bui-common": "~1.1.0",
+      "bui-picker": "~1.1.0",
+      "bui-list": "~1.1.0"
     },
     "devDependencies": {
       "expect.js": "0.3.1",
-      "sinon": "1.6.0"
+      "sinon": "1.6.0",
+      "bui-dpl" : "~1.1.0",
+      "bui-data" : "~1.1.0"
     },
     "engines": {
       "seajs": "2.2.1"
     },
     "buildArgs": "--ignore jquery",
-    "tests": "tests/tag-spec.js"
+    "tests": "tests/*.js"
   }
 }
